--- a/front-end/home.html
+++ b/front-end/home.html
@@ -62,6 +62,8 @@
                     <input class="form-control" type="search" placeholder="Search" aria-label="Search">
                 </form>
                 <div class="text-end" id="user-auth">
+                    <button type="button" onclick='window.location.href = "favorites_page.html"' 
+                        class="btn btn-outline-warning me-2">Favorites List</button>
                     <button type="button" class="btn btn-outline-warning me-2">Login</button>
                     <button type="button" class="btn btn-warning">Sign-up</button>
                 </div>
@@ -99,7 +101,9 @@
                                 <h5 class="card-title">Movie 1</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -114,7 +118,8 @@
                                 <h5 class="card-title">Movie 2</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -129,7 +134,8 @@
                                 <h5 class="card-title">Movie 3</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -144,7 +150,8 @@
                                 <h5 class="card-title">Movie 4</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -159,7 +166,8 @@
                                 <h5 class="card-title">Movie 5</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -175,7 +183,8 @@
                                 <h5 class="card-title">Movie 1</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -190,7 +199,8 @@
                                 <h5 class="card-title">Movie 2</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -205,7 +215,8 @@
                                 <h5 class="card-title">Movie 3</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -220,7 +231,8 @@
                                 <h5 class="card-title">Movie 4</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -235,7 +247,8 @@
                                 <h5 class="card-title">Movie 5</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -251,7 +264,8 @@
                                 <h5 class="card-title">Movie 1</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -266,7 +280,8 @@
                                 <h5 class="card-title">Movie 2</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -281,7 +296,8 @@
                                 <h5 class="card-title">Movie 3</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -296,7 +312,8 @@
                                 <h5 class="card-title">Movie 4</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -311,7 +328,8 @@
                                 <h5 class="card-title">Movie 5</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -327,7 +345,8 @@
                                 <h5 class="card-title">Movie 1</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -342,7 +361,8 @@
                                 <h5 class="card-title">Movie 2</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -357,7 +377,8 @@
                                 <h5 class="card-title">Movie 3</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -372,7 +393,8 @@
                                 <h5 class="card-title">Movie 4</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
@@ -387,7 +409,8 @@
                                 <h5 class="card-title">Movie 5</h5>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-primary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-primary" 
+                                            onclick='window.location.href = "content_page.html"'>View</button>
                                         <button type="button" class="btn btn-sm btn-outline-primary">Add</button>
                                     </div>
                                     <small class="text-body-secondary">Genre</small>
