--- a/front-end/home_page2.html
+++ b/front-end/home_page2.html
@@ -67,93 +67,120 @@
     </header>
     <section class="album-contents p-4 border-bottom border-info">
         <div class="container py-4">
-            <div class="row border">
-                
-            </div>
-            <h2 class="album-title">Recently Updated</h2>
-            <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5 mb-5">
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+            <div id="main"class="row">
+                <div id="recently-section" class="col-9">
+                    <h2 class="album-title">Recently Updated</h2>
+                    <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5 mb-5">
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
                     </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
+                    <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5">
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="card">
+                                <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                            </div>
+                            <div class="content-title py-1 ps-1">
+                                <h5 class="card-title">Content Title</h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                <div id="sidebar" class="col-3">
+                    <div class="container">
+                        <div class="card-body">
+                            <h2 class="sidebar-title">Top 10</h2>
+                            <div class="table table-hover">
+                                <thead>
+                                    <tr>
+                                      <th scope="col">#</th>
+                                      <th scope="col">Title</th>
+                                      <th scope="col">Rating</th>
+                                      <th scope="col">Available on</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>
+                                        </td>
+                                        <td>entry</td>
+                                        <td>entry</td>
+                                    </tr>
+                                </tbody>
+                            </div>
+                        </div>
                     </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5">
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
-                <div class="col-sm-auto">
-                    <div class="card">
-                        <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                    </div>
-                    <div class="content-title py-1 ps-1">
-                        <h5 class="card-title">Content Title</h5>
-                    </div>
-                </div>
+                </div>             
             </div>
         </div> 
     </section>
