chore: fixed the home page navigation links

--- a/front-end/home_page.html
+++ b/front-end/home_page.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav me-auto py-1 justify-content-start">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="home_page2.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="home_page.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Movies</a>
@@ -54,7 +54,7 @@
                             <a class="nav-link" href="#">TV-Shows</a>
                         </li>
                         <li class="nav-item me-5">
-                            <a class="nav-link" href="favorites_page2.html">Favorites List</a>
+                            <a class="nav-link" href="favorites_page.html">Favorites List</a>
                         </li>
                     </ul>
                     <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
