Added view HTML to app module. Misc fix

--- a/front-end/home_page.html
+++ b/front-end/home_page.html
@@ -25,10 +25,10 @@
     .navbar {
         background-color: #040A18;
     }
-    .navbar-bottom {
+    /* .navbar-bottom {
         background:transparent;
         color: #fff;
-    }
+    } */
     .selector-for-some-widget {
         box-sizing: content-box;
     }   
