fixed directory structure and added angular app

--- a/front-end/content_page.html
+++ b/front-end/content_page.html
@@ -78,7 +78,7 @@
   <main>
     <div class="container py-2 pb-3">
       <div class="card mb-3">
-        <img class="card-img-top" src="MovieImage.png" alt="Card image cap">
+        <img class="card-img-top" src="" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Movie Name</h5>
           <div>
